...
 OTHER DEALINGS IN THE SOFTWARE.
*/

"Home"="Home";
"Resources"="Resources";
"My Account"="My Account";
"Sign In"="Sign In";
"New User?"="New User?";
"Sign up"="Sign up";
"Sign Up"="Sign Up";
"This feature will be available in the next sprint."="This feature will be available in the next sprint.";
"Are you sure you want to sign out?"="Are you sure you want to sign out?";

...
"Sign Out later"="Sign Out later";
"Reach Out"="Reach Out";

"Please join study to go forward."="Please join study to go forward.";

"Select Lead Time"="Select Lead Time";
"Done"="Done";
"Cancel"="Cancel";
"ySK-jB-LwD.normalTitle.value" = "CANCEL";
"Join Study"="Join Study";
"Leave Study"="Leave Study";



...
"Need Help? Contact Us"="Need Help? Contact Us";

"Your registered email(xyz@gmail.com) is pending verification. Enter the Verification Code received on this email to complete verification and try the Forgot Password action again."="Your registered email(xyz@gmail.com) is pending verification. Enter the Verification Code received on this email to complete verification and try the Forgot Password action again.";

"Your registered email is pending verification. Please type in the Verification Code received in the email to complete this step and proceed to using the app."="Your registered email is pending verification. Please type in the Verification Code received in the email to complete this step and proceed to using the app.";

"Why Register?"="Why Register?";
"Terms"="Terms";
"Privacy Policy"="Privacy Policy";

"An email has been sent to xyz@gmail.com. Please type in the Verification Code received in the email to complete the verification step."="An email has been sent to xyz@gmail.com. Please type in the Verification Code received in the email to complete the verification step.";

"Message"="Message";
"Please verify your email address."="Please verify your email address.";
"An email verification code has been sent to your registered email."="An email verification code has been sent to your registered email.";
...
"Forgot Passcode? Sign In Again"="Forgot Passcode? Sign In Again";
"Set up a passcode for the app"="Set up a passcode for the app";
"Continue"="Continue";


"Validated!"="Validated!";
"OK"="OK";
"Enter a token"="Enter a token";
"Enter keyword(s)"="Enter keyword(s)";
"Study Protocol"="Study Protocol";

"Your enrollment token has been successfully validated. You are eligible to join the Study.\nPlease click Continue to proceed to the Consent section."="Your enrollment token has been successfully validated. You are eligible to join the Study.\nPlease click Continue to proceed to the Consent section.";

...

"Based on the answers you provided, you are eligible to participate in this study.\nPlease click Continue to proceed to the Consent section."="Based on the answers you provided, you are eligible to participate in this study.\nPlease click Continue to proceed to the Consent section.";

"Change server to"="Change server to";


"TERMS"="TERMS";
"PRIVACY POLICY"="PRIVACY POLICY";
"Please Enter Valid Value"="Please Enter Valid Value";
"Important Note"="Important Note";
"Ok"="Ok";
"Cancel"="Cancel";
"Delete Account"="Delete Account";

...


"Account has been deleted"="Account has been deleted";

"Stay up-to-date! Turn ON notifications and reminders in app and phone settings to get notified about study activity in a timely manner."="Stay up-to-date! Turn ON notifications and reminders in app and phone settings to get notified about study activity in a timely manner.";

"SIGN IN"="SIGN IN";
"PASSWORD HELP"="PASSWORD HELP";
"We have sent a temporary password to your registered email. Please login with temporary password and change your password."="We have sent a temporary password to your registered email. Please login with temporary password and change your password.";
"SIGN UP"="SIGN UP";
"I Agree to the Terms and Privacy Policy"="I Agree to the Terms and Privacy Policy";
"NOTIFICATIONS"="NOTIFICATIONS";
"Please enter your first name."="Please enter your first name.";
"Please enter your last name."="Please enter your last name.";
"Please enter your email address."="Please enter your email address.";
"Please enter your password."="Please enter your password.";
...



"App Glossary"="App Glossary";
"By tapping Sign In, you agree to this app's Terms and Privacy Policy"="By tapping Sign In, you agree to this app's Terms and Privacy Policy";

"New User? Sign Up"="New User? Sign Up";
"RESOURCES"="RESOURCES";

"Study Status"="Study Status";
"Active"="Active";
"COMPLETION:"="COMPLETION:";
"Closed"="Closed";
...
"uYJ-Jl-iiH.normalTitle.value"="Submit";


"0li-V5-aDa.placeholder.value"="Enter Verification Code";
"229-dc-iON.text.value"="Please enter your registered email to receive password help.";
"2Iq-sI-1MG.text.value"="Verification Step";
"3eF-aU-RcQ.normalTitle.value"="Forgot password?";
"5n7-N7-Pdx.normalTitle.value"="Submit";
"867-Vn-0xS.placeholder.value"="enter Email";
"93M-Fs-drd.normalTitle.value"="Continue";
"G1v-Yc-O0B.normalTitle.value"="Get Started";
"Les-Kl-pFS.normalTitle.value"="Sign In";
"QZr-DS-rsL.normalTitle.value"="Submit";
"Tm3-4k-53S.normalTitle.value"="Resend Verification Code";
"WOM-w4-FBB.text.value"="Your Sign Up process is now complete";
"WsS-eE-w8m.normalTitle.value"="Sign in";
"d1G-F1-50Q.text.value"="Congrats!";
"eRj-pM-e3e.placeholder.value"="Enter Verification Code";
"gYt-xI-csS.normalTitle.value"="Resend Verification Code";
"pzi-7P-kZh.normalTitle.value"="Continue";
"qBm-e0-RzA.text.value"="Verification Step";
"qls-nn-uxZ.normalTitle.value"="Get Started";
...
