...
                                                        <constraint firstAttribute="width" constant="149" id="uGp-a8-vI1"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="enter email" textAlignment="right" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="TVv-OZ-IiD">
                                                    <rect key="frame" x="173" y="6" width="219" height="48"/>
                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
                                                    <textInputTraits key="textInputTraits"/>
                                                    <connections>
                                                        <action selector="reload" destination="Hb9-ku-DtX" eventType="editingDidEndOnExit" id="X4g-bs-dEm"/>
                                                        <outlet property="delegate" destination="A51-y2-CGR" id="69M-3a-Uwe"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4rc-d7-Oml">
                                <rect key="frame" x="8" y="20" width="50" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="DLW-wP-4yf"/>
                                    <constraint firstAttribute="width" constant="50" id="ZcO-LG-wY0"/>
                                </constraints>
                                <state key="normal" image="backIcon"/>
                                <connections>
                                    <action selector="buttonActionBack:" destination="KuI-8R-b3A" eventType="touchUpInside" id="gi2-e2-NGJ"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="UmJ-vl-H29"/>
...
